--- a/app/src/main/res/layout/list_note_item.xml
+++ b/app/src/main/res/layout/list_note_item.xml
@@ -36,7 +36,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/listNoteDescription"
-        android:lines="2"
         android:layout_marginEnd="5dp"
         android:text="@string/dummy_date_sort"
         android:textColor="@color/gray"
@@ -48,8 +47,9 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/listNoteDescription"
         android:layout_toEndOf="@id/listNoteDay"
-        android:lines="2"
         android:textStyle="bold"
+        android:paddingStart="0dp"
+        android:paddingEnd="20dp"
         android:text="@string/dummy_date_long"
         android:textColor="@color/gray"
         android:textSize="12sp"/>
@@ -59,7 +59,6 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/listNoteDescription"
         android:layout_alignParentEnd="true"
-        android:lines="2"
         android:textStyle="bold"
         android:text="@string/label_detail"
         android:textColor="@color/gray"
