--- a/app/src/main/res/layout/list_schedule_item.xml
+++ b/app/src/main/res/layout/list_schedule_item.xml
@@ -12,7 +12,8 @@
         android:id="@+id/leftDate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingRight="20dp"
+        android:paddingStart="0dp"
+        android:paddingEnd="20dp"
         android:paddingTop="10dp"
         android:text="@string/dummy_number_medium"
         android:textStyle="bold"
@@ -23,9 +24,10 @@
         android:id="@+id/leftMonth"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingRight="20dp"
+        android:paddingStart="0dp"
+        android:paddingEnd="20dp"
         android:layout_below="@id/leftDate"
-        android:text="OCT"
+        android:text="@string/dummy_date_sort"
         android:textColor="@color/white"
         android:textSize="15sp" />
 
@@ -36,26 +38,26 @@
         android:layout_height="20dp"
         android:contentDescription="@string/description_general"
         android:background="@color/white"
-        android:layout_marginLeft="60dp"/>
+        android:layout_marginStart="60dp"/>
 
     <ImageView
         android:id="@+id/timeline"
         android:adjustViewBounds="true"
         android:layout_width="1dp"
-        android:layout_height="65dp"
+        android:layout_height="70dp"
         android:layout_marginTop="30dp"
         android:contentDescription="@string/description_general"
         android:background="@color/white"
-        android:layout_marginLeft="60dp"/>
+        android:layout_marginStart="60dp"/>
 
     <ImageView
         android:id="@+id/listScheduleIcon"
         android:adjustViewBounds="true"
         android:layout_width="30dp"
         android:layout_height="wrap_content"
-        android:layout_marginRight="12dp"
+        android:layout_marginEnd="12dp"
         android:paddingTop="10dp"
-        android:layout_marginLeft="45dp"
+        android:layout_marginStart="45dp"
         android:contentDescription="@string/description_general"
         android:src="@drawable/ic_node" />
 
@@ -63,10 +65,12 @@
         android:id="@+id/listScheduleTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_toRightOf="@id/listScheduleIcon"
-        android:paddingRight="20dp"
+        android:layout_toEndOf="@id/listScheduleIcon"
+        android:paddingStart="0dp"
+        android:paddingEnd="20dp"
         android:paddingTop="10dp"
         android:text="@string/dummy_text_sort"
+        android:textStyle="bold"
         android:textColor="@color/white"
         android:textSize="18sp" />
 
@@ -76,9 +80,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/listScheduleTitle"
-        android:layout_toRightOf="@id/listScheduleIcon"
+        android:layout_toEndOf="@id/listScheduleIcon"
         android:lines="2"
         android:layout_marginBottom="10dp"
+        android:layout_marginTop="5dp"
         android:text="@string/dummy_text_long"
         android:textColor="@color/gray"
         android:textSize="12sp" />
@@ -89,25 +94,37 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/listScheduleDescription"
-        android:layout_toRightOf="@id/listScheduleIcon"
-        android:lines="2"
-        android:layout_marginRight="5dp"
-        android:text="SUNDAY,"
+        android:layout_toEndOf="@id/listScheduleIcon"
+        android:layout_marginBottom="10dp"
+        android:layout_marginEnd="5dp"
+        android:text="@string/dummy_date_sort"
         android:textColor="@color/gray"
-        android:textSize="10sp"/>
+        android:textSize="12sp"/>
 
     <TextView
         android:id="@+id/listScheduleDate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/listScheduleDescription"
-        android:layout_toRightOf="@id/listScheduleDay"
-        android:lines="2"
+        android:layout_toEndOf="@id/listScheduleDay"
+        android:layout_marginBottom="10dp"
         android:textStyle="bold"
-        android:paddingRight="20dp"
-        android:text="20 MAY 2015"
+        android:paddingStart="0dp"
+        android:paddingEnd="20dp"
+        android:text="@string/dummy_date_long"
         android:textColor="@color/gray"
-        android:textSize="10sp"/>
+        android:textSize="12sp"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/listScheduleDescription"
+        android:layout_alignParentEnd="true"
+        android:layout_marginBottom="10dp"
+        android:textStyle="bold"
+        android:text="@string/label_detail"
+        android:textColor="@color/gray"
+        android:textSize="12sp"/>
 
     <TextView
         android:id="@+id/listScheduleId"
